--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "npm-run-all test:*",
     "test:html": "html-validate *.html",
     "test:js": "eslint js/",
-    "build": "npm-run-all build:* test",
+    "build": "npm-run-all build:*",
     "build:sass": "node-sass --output-style compact -o css sass",
     "build:autoprefixer": "autoprefixer-cli css/style.css",
     "build-dev": "npm-run-all build-dev:sass build:autoprefixer",
